first api to get all products
